pod/meteor/cs/gateway-prod.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteor-cs-gateway
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #~ cert-manager.io/issuer: acme-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/session-cookie-name: CROWDSRCSID
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/session-cookie-samesite: Strict
    nginx.ingress.kubernetes.io/session-cookie-max-age: "43200"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${METEOR_CS_HOST}.talkingpts.org
      secretName: tapo-wild-certificate
